fixed cardback image bug, gameboard overlap bug, overflow scroll bug

--- a/src/styles/partials/_card.scss
+++ b/src/styles/partials/_card.scss
@@ -27,6 +27,7 @@
             border-radius: 5px;
             border: 5px solid white;
             position: relative;
+            backface-visibility: hidden;
             img {
                 border-radius: 5px;
                 width: 400%;
@@ -34,13 +35,17 @@
                 left: -80%;
                 bottom: 50%;
                 transform: rotate(-45deg);
+                backface-visibility: hidden;
+                z-index: 0;
+                -webkit-backface-visibility: hidden;
             }
         }
         &--front {
-            background-color: red;
             transform: rotateY(180deg);
-            // overflow: hidden;
             border-radius: 5px;
+            img {
+                z-index: 10;
+            }
         }
     }
     &__victoryMessage {
