--- a/src/styles/partials/_game.scss
+++ b/src/styles/partials/_game.scss
@@ -5,7 +5,7 @@
     padding: 10px;
     max-width: 100vw;
     width: 100%;
-    justify-content: center;
+    justify-content: flex-end;
     &__cardArea {
         display: flex;
         justify-content: space-between;
@@ -39,7 +39,7 @@
     .adminArea {
         display: flex;
         justify-content: space-between;
-        overflow: scroll;
+        // overflow: scroll;
     }
     .cardTracker {
         display: flex;
