--- a/src/styles/partials/_instructions.scss
+++ b/src/styles/partials/_instructions.scss
@@ -17,7 +17,6 @@
     margin: 0 auto;
     position: relative;
     max-width: 500px;
-    display: flex;
     .interactiveOverlay {
         position: absolute;
         top: 0;
